--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server-dev": "nodemon server/index.js",
     "start": "webpack -p && node ./server/index.js"
   },
-  "author": "Daniel Kang",
+  "author": "Mitchel Constantin",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
